--- a/main.html
+++ b/main.html
@@ -2,20 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
+  <title>Custom Video Player</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
-    </div>
-  </div>
+<div class="player">
+  <video class="viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
 
-<script  src="./script.js">
-  //Your code goes here
-</script>
+  <div class="player__controls">
+    <div class="progress">
+      <div class="progress__filled"></div>
+    </div>
+
+    <button class="player__button toggle">►</button>
+
+    <input type="range" name="volume" min="0" max="1" step="0.05" value="0.75">
+    <input type="range" name="playbackRate" min="0.5" max="2" step="0.1" value="1">
+
+    <button data-skip="-10">« 10s</button>
+    <button data-skip="25">25s »</button>
+  </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
